# OpenAgentLock

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  npm-publish.yml  pages.yml
Formula/: agentlock.rb
cli/: LICENSE  README.md  agentlock  bun.lockb  bunfig.toml  package.json  tsconfig.json
cli/src/: index.ts
cli/tests/: auth-api.test.ts  dashboard-api.test.ts  detect.test.ts  e2e.test.ts  editor.test.ts  hook-claude-code.test.ts  hook-codex.test.ts  hook-cursor.test.ts  hook-gemini.test.ts  install-api.test.ts  install-fs.test.ts  keychain.test.ts  mcp-proxy.test.ts  mcp-server.test.ts  multiselect.test.tsx  rules.test.ts  signer.test.ts  totp.test.ts
control-plane/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
control-plane/api/: group-policy.schema.json  openapi.yaml
control-plane/dashboard-ui/: bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  (+1 more)
docs/: faq.md  index.md  requirements.txt  status.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
ledger/: Cargo.toml  README.md
ledger/include/: openagentlock_ledger.h
ledger/src/: ffi.rs  lib.rs  merkle.rs
ledger/tests/: ffi.rs  merkle.rs
policies/: default.yaml
scripts/: check-bun-locks.sh  install-git-hooks.sh  install.sh
site/: 404.html  index.html  requirements.txt  sitemap.xml
(+202 files in other folders)
