[package]
name = "openagentlock-ledger"
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
publish = false
description = "Append-only Merkle ledger for OpenAgentLock. Used by the Go control-plane via FFI / sidecar."
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
name = "openagentlock_ledger"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
proptest = "1"
